--- a/aws/tf-workspace/template.tfvars.example
+++ b/aws/tf-workspace/template.tfvars.example
@@ -22,6 +22,33 @@ admin_user = ""
 # Databricks account ID
 databricks_account_id = ""
 
+# Databricks account ID
+workspace_host = ""
+
+# Account credentials ID
+credentials_id = ""
+
+# Account storage id
+storage_configuration_id = ""
+
+# Account network id
+network_id = ""
+
+# ?
+private_access_settings_id = ""
+
+# Account managed services CMK id
+managed_services_customer_managed_key_id = ""
+
+# Account storage CMK id
+storage_customer_managed_key_id = ""
+
+# Network policy id
+network_policy_id = ""
+
+# NCC id
+network_connectivity_configuration_id = ""
+
 # -----------------------------------------------------------------------------
 # Resource Configuration
 # -----------------------------------------------------------------------------
