Infrastructure and account modules separated

--- a/aws/tf-account/template.tfvars.example
+++ b/aws/tf-account/template.tfvars.example
@@ -26,31 +26,27 @@ databricks_account_id = ""
 # Resource Configuration
 # -----------------------------------------------------------------------------
 
-# Prefix used for naming and tagging resources (e.g., S3 buckets, IAM roles)
-resource_prefix = ""
+# Prefix used for naming and tagging account specific resources 
+account_resource_prefix = ""
+
+# Prexfix for workspace specific resources
+workspace_resource_prefix = ""
 
 # -----------------------------------------------------------------------------
 # Network Configuration
 # -----------------------------------------------------------------------------
 
-# Network type: "custom" or "isolated" (see README.md for more information)
-network_configuration = "isolated"
-
-# ISOLATED NETWORK CONFIGURATION
-# Required when using network_configuration = "isolated"
-vpc_cidr_range           = "10.0.0.0/18"
-private_subnets_cidr     = ["10.0.0.0/22", "10.0.4.0/22", "10.0.8.0/22"]
-privatelink_subnets_cidr = ["10.0.28.0/26", "10.0.28.64/26", "10.0.28.128/26"]
-sg_egress_ports          = [443, 2443, 6666, 8443, 8444, 8445, 8446, 8447, 8448, 8449, 8450, 8451]
+# Network type: "custom". "isolated" is no longer supported as we're creating the VPC in a different module (see README.md for more information)
+network_configuration = "custom"
 
 # CUSTOM NETWORK CONFIGURATION
 # Required when using network_configuration = "custom"
 # Uncomment and configure the following variables for custom networking:
-# custom_vpc_id             = ""
-# custom_private_subnet_ids = ["", ""]
-# custom_sg_id              = ""
-# custom_relay_vpce_id      = ""
-# custom_workspace_vpce_id  = ""
+custom_vpc_id             = ""
+custom_private_subnet_ids = ["", ""]
+custom_sg_id              = ""
+custom_relay_vpce_id      = ""
+custom_workspace_vpce_id  = ""
 
 # -----------------------------------------------------------------------------
 # Feature Flags
