--- a/aws/tf-infra/template.tfvars.example
+++ b/aws/tf-infra/template.tfvars.example
@@ -13,27 +13,27 @@ aws_account_id = ""
 region = ""
 
 # -----------------------------------------------------------------------------
-# Databricks Variables
-# -----------------------------------------------------------------------------
-
-# Databricks account ID
-databricks_account_id = ""
-
-# Databricks workspace URL
-workspace_url = ""
-
-# Catalog admin user (owner)
-admin_user = ""
-
-# Workspace id
-workspace_id = ""
-
-# Catalog name
-catalog_name = ""
-
-# -----------------------------------------------------------------------------
 # Resource Configuration
 # -----------------------------------------------------------------------------
 
-# Prefix used for naming and tagging resources for the catalog (e.g., S3 buckets, IAM roles)
-resource_prefix = ""
+# Prefix used for naming and tagging infrastructure specific resources 
+infra_resource_prefix = ""
+
+# Prefix used for naming and tagging workspace specific resources 
+workspace_resource_prefix = ""
+
+# -----------------------------------------------------------------------------
+# Network Configuration
+# -----------------------------------------------------------------------------
+
+vpc_cidr_range           = "10.0.0.0/18"
+private_subnets_cidr     = ["10.0.0.0/22", "10.0.4.0/22", "10.0.8.0/22"]
+privatelink_subnets_cidr = ["10.0.28.0/26", "10.0.28.64/26", "10.0.28.128/26"]
+sg_egress_ports          = [443, 2443, 6666, 8443, 8444, 8445, 8446, 8447, 8448, 8449, 8450, 8451]
+
+# -----------------------------------------------------------------------------
+# Catalog Configuration
+# -----------------------------------------------------------------------------
+
+# Catalogs accessed by the workspace
+catalogs = [ "Catalog_A", "Catalog_B" ]
