Added bucket configuration to catalog

--- a/aws/tf-catalog/template.tfvars.example
+++ b/aws/tf-catalog/template.tfvars.example
@@ -31,6 +31,9 @@ workspace_id = ""
 # Catalog name
 catalog_name = ""
 
+# Bucket Name
+bucket_name = ""
+
 # -----------------------------------------------------------------------------
 # Resource Configuration
 # -----------------------------------------------------------------------------
