--- a/aws/tf-infra/template.tfvars.example
+++ b/aws/tf-infra/template.tfvars.example
@@ -16,10 +16,10 @@ region = ""
 # Resource Configuration
 # -----------------------------------------------------------------------------
 
-# Prefix used for naming and tagging infrastructure specific resources 
+# Prefix used for naming and tagging infrastructure specific resources (VPC)
 infra_resource_prefix = ""
 
-# Prefix used for naming and tagging workspace specific resources 
+# Prefix used for naming and tagging workspace specific resources (Security Groups, PrivateLink)
 workspace_resource_prefix = ""
 
 # -----------------------------------------------------------------------------
@@ -35,5 +35,7 @@ sg_egress_ports          = [443, 2443, 6666, 8443, 8444, 8445, 8446, 8447, 8448,
 # Catalog Configuration
 # -----------------------------------------------------------------------------
 
-# Catalogs accessed by the workspace
+# S3 bucket names of catalogs accessed by the workspace
+# These are needed so we can apply the policy to the S3 gateway endpoint granting access
+# As more catalogs are added, more S3 buckets will need to be added here, assuming one S3 bucket is assigned per catalog
 catalogs = [ "Catalog_A", "Catalog_B" ]
